tested and working properly outputting object that was collided with to output log

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.16-00.47.49
+Building_Escape.TimeStamp=2021.06.25-18.43.31
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -2000,6 +2000,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StaticMeshActor=StaticMeshActor.Collision.Collision,
 
 [MaterialInstanceEditor]
 bShowGrid=False
