added in the phsyics handle component

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -957,6 +957,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Models/DefaultPawn_BP.DefaultPawn_BP
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1595,6 +1596,15 @@ MyBuilding_EscapeGameModeBase_BP_C.Tick=True
 MyBuilding_EscapeGameModeBase_BP_C.Classes=True
 MyBuilding_EscapeGameModeBase_BP_C.Game=True
 MyBuilding_EscapeGameModeBase_BP_C.GameMode=True
+PhysicsHandleComponent.Variable=True
+PhysicsHandleComponent.Sockets=True
+PhysicsHandleComponent.PhysicsHandle=True
+PhysicsHandleComponent.Tags=True
+PhysicsHandleComponent.ComponentTick=True
+PhysicsHandleComponent.ComponentReplication=True
+PhysicsHandleComponent.Activation=True
+PhysicsHandleComponent.Cooking=True
+PhysicsHandleComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1602,6 +1612,7 @@ SourceCodeAccessSettings=True
 CryptoKeysSettings=True
 GeneralProjectSettings=True
 GameMapsSettings=True
+InputSettings=True
 
 [RootWindow]
 ScreenPosition=X=-7.000 Y=-8.000
@@ -1820,8 +1831,8 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyBuilding_EscapeGameModeBase_BP
-MRUItem1=/Game/Models/DefaultPawn_BP
+MRUItem0=/Game/Models/DefaultPawn_BP
+MRUItem1=/Game/MyBuilding_EscapeGameModeBase_BP
 MRUItem2=/Game/Models/DoorFrame
 MRUItem3=/Game/Models/MetalFloor_Mat
 MRUItem4=/Game/Models/Broken_Concrete
