--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,8 +130,8 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.06.26-00.43.27
-Building_Escape.LastCompileMethod=External
+Building_Escape.TimeStamp=2021.07.03-15.16.40
+Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.04.03-18.31.02
@@ -1695,7 +1695,7 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=CompilerResultsLog
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
