--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1941,75 +1941,75 @@ PreviewMaterial.Translucency=True
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
 MaterialInstanceConstant=
-CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AssetToolsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ChaosSolverSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-DebugCameraControllerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LandscapeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NavigationSystemV1=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-SkeletalMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-StructViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TextureImportSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LuminRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MagicLeapSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GooglePADRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MagicLeapSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MagicLeapARPinSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AssetToolsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+ChaosSolverSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+DebugCameraControllerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+LandscapeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+NavigationSystemV1=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+SkeletalMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+StructViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+TextureImportSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+LuminRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+MagicLeapSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+GooglePADRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+MagicLeapSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+MagicLeapARPinSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 
 [MaterialInstanceEditor]
