--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.07.10-15.42.21
+Building_Escape.TimeStamp=2021.07.13-22.05.16
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -2011,6 +2011,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.GrabAction,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
+BrushComponent=StaticMeshActor.Collision.Collision,
 
 [MaterialInstanceEditor]
 bShowGrid=False
