adding functionality to add up total weight of objects

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Levels/Building_Escape
 
 [ModuleFileTracking]
-Building_Escape.TimeStamp=2021.07.13-22.05.16
+Building_Escape.TimeStamp=2021.07.18-16.40.52
 Building_Escape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.04.03-18.31.01
 PakFile.LastCompileMethod=Unknown
@@ -954,9 +954,12 @@ MovieSceneCapture.TimeStamp=2021.04.03-18.31.00
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2021.04.03-18.30.58
 ExternalImagePicker.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.04.03-18.30.55
+BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Models/DefaultPawn_BP.DefaultPawn_BP
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1604,6 +1607,19 @@ PhysicsHandleComponent.ComponentReplication=True
 PhysicsHandleComponent.Activation=True
 PhysicsHandleComponent.Cooking=True
 PhysicsHandleComponent.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
